src/style.css
:root {
    font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
    line-height: 1.5;
    font-weight: 400;

    color-scheme: light dark;
    color: rgba(255, 255, 255, 0.87);
    background-color: #242424;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.avatar {
    font-weight: 500;
    color: #888;
    text-decoration: inherit;
    will-change: filter;
    transition: filter 300ms;
}

body {
    display: flex;
    flex-direction: column;
    margin: 0;
    place-items: center;
    min-width: 320px;
    min-height: 100vh;
}

h1 {
    font-size: 2em;
    line-height: 1.1;
}
.top.nav {
    display: flex;
    place-items: center;
}

.top.nav ul {
    display: flex;
    padding: 0;
}

.top.nav li {
    display: block;
    padding: 1.5em;
}

.top.nav li:hover {
    display: block;
    padding: 1.5em;
    cursor: pointer;
}

.top.nav #mode {
    background-color: #213547;
    height: 1.5em;
    width: 1.5em;
    border-radius: 2em;
}

#app {
    max-width: 1280px;
    margin: 0 auto;
    padding: 2rem;
    text-align: center;
    flex-grow: 1;
}

.logo {
    height: 6em;
    padding: 0.5em;
    border-radius:6em;
    will-change: filter;
    transition: filter 300ms;
}
.logo:hover {
    filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.vanilla:hover {
    filter: drop-shadow(0 0 2em #f7df1eaa);
}

.card {
    padding: 2em;
}

.star-trek {
    color: #888;
}

.project-list {
    display: flex;
    flex-direction: column;
    width: 75vw;
    margin: auto;
    text-decoration: none;
    padding: 0;
}

.project-list li {
    display: flex;
    width: 100%;
}

.project-list .project {
    display: flex;
    align-items: center;
    border-radius: 0.5em;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    color: black;
    text-decoration: none;
    width: 100%;
    margin: 16px 0;
}

#amuzic {
    background: #B9F0B7;
}

#amuzeo {
    background: #E3EE9E;
}

#ark-builders {
    background: #fde37f;
}

#arkade-kotlin {
    background: #a199d3;
}

#arkade-kotlin .project-icon {
    height: 2em;
    width: 12em;
}

.project-list li a .project-icon {
    width: 4em;
    margin-left: 1em;
    margin-right: 1em;
}

.repo-host {
    width: 2em;
    margin-left: 1em;
    margin-right: 1em;
}

.project-list li a p {
    font-size: 18pt;
    text-align: justify;
    width: 100%;
}

.articles {
    display: flex;
    flex-direction: column;
    text-decoration: none;
    list-style-type: none;
    padding: 0;
}

.articles .article:hover {
    cursor: pointer;
}
.articles .article {
    display: flex;
    height: fit-content;
    align-items: center;
    border-radius: 0.5em;
    padding-right: 0.5em;
    padding-left: 0.5em;
    text-decoration: underline;
    margin: 0;
    width: fit-content;
    font-size: 16pt;
}

#article-space {
    background: #fde37f;
}
#tech-sect {
    margin-top: 4em;
}

.tech {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    padding: 0;
}

.tech li {
    display: flex;
    flex-direction: column;
    height: fit-content;
    margin: 0.5em 2em;
}

.tech li img {
    width: 3em;
}

#gpgDiv {
    display: flex;
    justify-content: center;
    align-items: center;
    width: fit-content;
    height: 2em;
    border-radius: 0.5em;
    padding: 0.4em;
    margin: auto;
}

#gpgDiv:hover {
    cursor: pointer;
}

#gpgDiv:active {
    background: #ece9e2;
}

#gpgDiv p {
    margin: 1em;
}

#gpgDiv img {
    width: 1.5em;
}

#gpgDiv img:hover {
    cursor: pointer;
}

footer {
    display: flex;
    width: 100%;
    text-align: center;
    place-items: center;
    justify-content: center;
    background-color: #f2fafa;
}

footer h4 {
}

footer img {
    width: 1.5em;
}

footer ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding: 0;
}

footer ul li {
    display: flex;
    place-items: center;
    padding: 8px;
    height: 2em;
    border-radius: 0.5em;
    margin: 0.5em;
}

footer ul li:hover {
    cursor: pointer;
}

footer ul #bitcoin:active {
    background: rgba(247, 147, 26, 0.55);
}

footer ul #ethereum:active {
    background: rgba(98, 126, 234, 0.55);
}

footer li p {
    margin-left: 0.5em;
    width: 30vw;
    max-width: 12em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

@media (prefers-color-scheme: light) {
    :root {
        color: #213547;
        background-color: #ffffff;
    }

    .top.nav #mode {
        background-color: #213547;
    }

    .avatar:hover {
        color: #f7df1eaa;
        filter: drop-shadow(0 0 5em #f7df1eaa);
    }
    button {
        background-color: #f9f9f9;
    }
}

@media (prefers-color-scheme: dark) {
    :root {
        color: #ffffff;
        background-color: #213547;
    }

    .top.nav #mode {
        background-color: #ffffff;
    }

    .top.nav ul li:hover {
        color: #f7df1eaa;
        filter: drop-shadow(0 0 5em #f7df1eaa);
    }

    .copy-icon {
        filter: invert(65%);
    }

    #rust {
        filter: invert(1);
    }

    button {
        background-color: #f9f9f9;
    }

    footer {
        background-color: #374f67;
    }
}

